--- a/templates/wishlist.html
+++ b/templates/wishlist.html
@@ -41,14 +41,14 @@
             left: 0;
             width: 100%;
             /* تمام عرض صفحه را بگیرد */
-            background-color: #a47864;
+            background: linear-gradient(to right, #e3dcdc,#7d5a4a);
             /* رنگ پس زمینه */
             color: #4f392e;
             /* رنگ متن */
             z-index: 1000;
             /* برای اطمینان از اینکه هدر از دیگر بخش‌ها بالاتر باشد */
             transition: all 0.4s ease-in-out;
-            font-family: 'Roboto', sans-serif;
+            font-family: "Shadows Into Light", cursive;
 
         }
 
@@ -61,7 +61,7 @@
 
 
         nav {
-            font-family: 'Roboto', sans-serif;
+            font-family: "Shadows Into Light", cursive;
             display: flex;
             justify-content: center;
             /* تنظیم منو به صورت افقی */
@@ -85,10 +85,10 @@
 
 
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: "Shadows Into Light", cursive;
             margin: 0;
             display: flex;
-            background-color: #a47864;
+            background: linear-gradient(to right, #e3dcdc,#7d5a4a);
             margin-top: 80px;
             /* به اندازه ارتفاع هدر فضای بالای صفحه را خالی می‌کنیم */
         }
@@ -140,6 +140,7 @@
             padding: 20px;
             background-color: #fff;
             text-align: center;
+            font-family: "Shadows Into Light", cursive;
 
         }
 
@@ -148,11 +149,13 @@
             color: #4f392e;
             margin-bottom: 30px;
             text-align: center;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .card p {
             color: #333;
             text-align: center;
+            font-family: "Shadows Into Light", cursive;
 
         }
 
@@ -161,6 +164,7 @@
             height: auto;
             margin-bottom: 10px;
             text-align: center;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .notification {
@@ -169,6 +173,7 @@
             text-align: center;
             font-weight: bold;
             color: #a47864;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .order-history table,
@@ -196,6 +201,7 @@
             margin-bottom: 40px;
             margin-top: 0px;
             text-align: center;
+            font-family: "Shadows Into Light", cursive;
 
         }
 
@@ -212,6 +218,7 @@
             color: #7d5a4a;
             font-size: 24px;
             margin: 20px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .product-list {
@@ -219,6 +226,7 @@
             flex-wrap: wrap;
             gap: 20px;
             margin: 0px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .product-card {
@@ -228,6 +236,7 @@
             text-align: center;
             background-color: #fff;
             margin-bottom: 0px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .product-card img {
@@ -238,10 +247,12 @@
 
         .product-card h3 {
             color: #a47864;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .product-card p {
             color: #333;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .product {
@@ -262,6 +273,7 @@
             /* متن سفید برای کنتراست */
             text-align: center;
             /* متن وسط‌چین */
+            font-family: "Shadows Into Light", cursive;
         }
 
         .product-gallery {
@@ -307,6 +319,7 @@
             padding: 5px 10px;
             cursor: pointer;
             margin: 5px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .gallery-nav button:hover {
@@ -332,6 +345,7 @@
             font-size: 16px;
             border-radius: 5px;
             margin-bottom: 20px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .toggle-btn:hover {
@@ -344,6 +358,7 @@
             /* سه ستون */
             gap: 20px;
             margin-top: 20px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .shadows-into-light-regular {
@@ -361,6 +376,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         #toggleOrdersBtn:hover {
@@ -375,6 +391,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         #toggleProfileBtn:hover {
@@ -390,6 +407,7 @@
             border-radius: 5px;
             cursor: pointer;
             font-size: 16px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         #toggleWishlistBtn:hover {
@@ -428,6 +446,7 @@
             font-family: 'Arial', sans-serif;
             font-weight: bold;
             color: #fff;
+            font-family: "Shadows Into Light", cursive;
         }
 
         /* استایل برای متن توتال پرایس */
@@ -439,6 +458,7 @@
             padding: 5px 10px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            font-family: "Shadows Into Light", cursive;
         }
 
         /* استایل برای کانتینر */
@@ -456,6 +476,7 @@
             justify-content: space-between;
             align-items: center;
             gap: 20px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         /* استایل برای متن توتال پرایس */
@@ -467,6 +488,7 @@
             padding: 5px 10px;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            font-family: "Shadows Into Light", cursive;
         }
 
         /* استایل برای دکمه پرداخت */
@@ -481,6 +503,7 @@
             border-radius: 5px;
             box-shadow: 0 3px 5px rgba(0, 0, 0, 0.2);
             transition: background-color 0.3s ease, transform 0.2s ease;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .payment-button:hover {
@@ -532,12 +555,14 @@
         .wishlist {
             padding: 20px;
             background-color: #f9f9f9;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .wishlist .products {
             display: flex;
             flex-wrap: wrap;
             gap: 20px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .wishlist .product {
@@ -547,6 +572,7 @@
             width: 30%;
             border-radius: 8px;
             text-align: center;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .wishlist .product img {
@@ -558,10 +584,12 @@
         .wishlist .product h3 {
             margin-top: 10px;
             font-size: 18px;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .wishlist .product p {
             color: #555;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .wishlist-icon {
@@ -570,6 +598,7 @@
             right: 10px;
             font-size: 20px;
             cursor: pointer;
+            font-family: "Shadows Into Light", cursive;
         }
 
         .wishlist-icon.in-wishlist {
@@ -584,12 +613,13 @@
 
 
         footer {
-            background-color: #a47864;
+            background: linear-gradient(to right, #e3dcdc,#7d5a4a);
             color: white;
             padding: 10px 0;
             text-align: center;
             position: relative;
             width: 100%;
+            font-family: "Shadows Into Light", cursive;
         }
     </style>
 </head>
